--- a/css-exercises/visualrules.css
+++ b/css-exercises/visualrules.css
@@ -70,7 +70,7 @@ p {
 }
 
 .image {
-  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/soccer.jpeg");
+  background-image: url('https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/soccer.jpeg');
   background-size: cover;
   background-position: center;
   height: 300px;
