--- a/projects/website.css
+++ b/projects/website.css
@@ -103,7 +103,7 @@ li.dropdown {
 }
 
 .image {
-  background-image: url('https://wanderworld360.com/wp-content/uploads/2016/12/Manarola-Italy.jpg');
+  background-image: url('/images/Homepageeurope.jpg');
   background-size: cover;
   background-position: center;
   height: 500px;
