--- a/website/styles.css
+++ b/website/styles.css
@@ -111,7 +111,7 @@ dt {
 }
 
 .image {
-  background-image: url('https://wanderworld360.com/wp-content/uploads/2016/12/Manarola-Italy.jpg');
+  background-image:url('/images/homepageeurope.jpg');;
   background-size: cover;
   background-position: center;
   height: 500px;
