--- a/website/styles.css
+++ b/website/styles.css
@@ -111,7 +111,7 @@ dt {
 }
 
 .image {
-  background-image:url('/images/homepageeurope.jpg');
+  background-image:url('/images/Homepageeurope.jpg');
   background-size: cover;
   background-position: center;
   height: 500px;
